--- a/app/views/records/_form.html.erb
+++ b/app/views/records/_form.html.erb
@@ -12,6 +12,22 @@
   <% end %>
 
   <div>
-    <%= form.submit %>
+    <form>
+      <div class="row mb-3">
+        <%= form.label :name, "Transaction name", class: "col-sm-2 col-form-label" %>
+        <div class="col-sm-10">
+          <%= form.text_field :name, class: "form-control" %>
+        </div>
+      </div>
+
+      <div class="row mb-3">
+        <%= form.label :amount, "Price", class: "col-sm-2 col-form-label" %>
+        <div class="col-sm-10">
+          <%= form.number_field :amount, placeholder: "5", class: "form-control" %>
+        </div>
+      </div>
+
+      <%= form.submit class: "btn btn-primary" %>
+    </form>
   </div>
 <% end %>
