--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,14 +1,22 @@
 <p style="color: green"><%= notice %></p>
+<div class="container">
+  <h1 class="list blue">CATEGORIES</h1>
 
-<h1>Categories</h1>
+  <div class="sub-container">
+    <% current_user.categories.each do |category| %>
+      <div class="list">
+        <div class="item"><%= image_tag category.icon %></div>
+        <div class="item category">
+          <%= link_to category.name, category %>
+        </div>
+        <div class="item amount">$<%= category.records.pluck(:amount).map(&:to_i).sum %></div>
+      </div>
+    <% end %>
+  </div>
 
-<div id="categories">
-  <% current_user.categories.each do |category| %>
-    <%= render category %>
-    <p>
-      <%= link_to "Show this category", category %>
-    </p>
-  <% end %>
+  <div>
+		<div class="add-new">
+      <%= link_to "ADD A NEW CATEGORY", new_category_path %>
+    </div>
+  </div>
 </div>
-
-<%= link_to "New category", new_category_path %>
