--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,9 +1,23 @@
-<h1>New category</h1>
+<div class="container">
+	<div class="back">
+		<%= link_to "<", categories_path %>
+	</div>
 
-<%= render "form", category: @category %>
+	<h2 class="list blue">NEW CATEGORY</h2>
 
-<br>
-
-<div>
-  <%= link_to "Back to categories", categories_path %>
+  <div class="sub-container">
+		<%= form_with model: @category do |form| %>
+    	<div>
+      	<%= form.label :name %><br>
+      	<%= form.text_field :name, placeholder: "Category name", class: "field", required: true %>
+    	</div>
+    	<div>
+      	<%= form.label :icon %><br>
+      	<%= form.text_field :icon, placeholder: "Icon link", class: "field", required: true %>
+    	</div>
+			<div class="add-item">
+    		<%= form.submit "ADD CATEGORY", class: "add" %>
+			</div>
+  	<% end %>
+	</div>
 </div>
